syntax = "proto3";
package svc.user;
option go_package = "microsvc/protocol/svc/user";

import "svc/common.proto";

message GetUserReq{
  BaseExtReq base = 1; // 每个外部接口Req都必须添加这个成员类型，grpc拦截器会做验证
  repeated int64 uids = 2;
}
message GetUserRes{
  map<int64, User> umap = 1;
}

message User{
  int64 uid = 1;
  string nickname = 2;
  int32 age = 3;
  int32 sex = 4;
}


message SignUpReq{
  string nickname = 1;
  int32 sex = 2;
  string birthday = 3;
  string phone_verify_code = 10;
}

message SignUpRes{
  string token = 1;
}


message SignInReq{
  BaseExtReq base = 1;
  string account = 2;
  string password = 3;
}
message SignInRes{
  User info = 1;
  string token = 2;
}

// *Ext 是外部服务接口组，要鉴权
service UserExt {
  rpc SignUp(SignUpReq) returns (SignUpRes);
  rpc SignIn(SignInReq) returns (SignInRes);
  rpc GetUser(GetUserReq) returns (GetUserRes);
}
